--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "editor.lineNumbers": "relative"
+  "editor.lineNumbers": "relative",
+  "javascript.referencesCodeLens.enabled": true,
+  "typescript.referencesCodeLens.enabled": true,
+  "eslint.validate": [
+    "javascript",
+  ]
 }
